# berea-textos-pd

./: .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
canon/: README.md  canon_66.json  canon_extendido.json  numbering_alias.json  numbering_alias.schema.json  verse_alias_lxx.json
docs/: adding_a_new_text.md  attribution_lexicon.md  format_bb.md  legal_issues_to_open.md  reproducibility.md
manifest/: manifest.json  schema.json
output/: README.md
pipeline/: __init__.py  build.py  canon.py  catalog.py  cli.py  download.py  normalize.py  pack.py  verify.py
pipeline/lexicon/: __init__.py  build.py  common.py  pack.py  parse_alignment_tagnt.py  parse_alignment_tahot.py  parse_bdb.py  parse_strongs_greek.py  parse_tbes.py  parse_tflsj.py
pipeline/parsers/: base.py  beblia_xml.py  ebible_usfm.py  itercatholicum_json.py  nestle1904_tsv.py  oshb_osis.py  stepbible_tagnt.py
scripts/: build_all.sh  build_lexicon.sh  build_one.sh  download_stepbible.sh  gen_numbering_alias.py  make_release.sh
sources/: README.md
tests/: test_beblia_xml.py  test_canon.py  test_catalog.py  test_ebible_usfm.py  test_lexicon_common.py  test_manifest.py  test_nestle1904.py  test_normalize.py  test_numbering_alias.py  test_oshb_osis.py  test_pack.py  test_pack_lexicon.py  test_parse_alignment_tagnt.py  test_parse_alignment_tahot.py  test_parse_strongs_bdb.py  test_parse_tbes.py  test_parse_tflsj.py  test_stepbible_tagnt.py
